feat: 관리자 계정 및 CORS/Swagger 설정 개선
- UserRole enum 추가 (USER/ADMIN) 및 User 엔티티에 role 필드 추가
- DataInitializer에 admin@onroot.com 계정 자동 생성 로직 추가
- /api/admin/** 엔드포인트 추가 (전체 유저/dday/plan/task/streak 조회)
- SecurityConfig에 CORS 설정 및 관리자 권한 제한 추가
- JwtAuthenticationFilter에 role 기반 authority 설정
- SwaggerConfig 타이틀 Onroot로 변경 및 모든 컨트롤러 응답코드 문서화